Chat Overlap FIx

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,7 +303,7 @@ input {
 }
 
 #output {
-    height: 90%;
+    height: 75%;
     padding: 0 5px;
     overflow-y: auto;
 }
@@ -371,5 +371,8 @@ input {
     }
     .choice:hover {
         color: #333;
+    }
+    #output {
+        height: 80%;
     }
 }
